--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0"
 reqwest = { version = "0.12.26", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 dotenv = "0.15.0"
+actix-cors = "0.7"
